    - XQueryColors: split a request into multiple requests if necessary
      (closes: #278984)
    - Revert "xcb: Add TCP fallback" (closes: #659558)
  * Don't require (fake)root for debian/rules clean.
  * Drop xorg-sgml-doctools dependency from libx11-doc, the css is now
    included in the html files directly.  Also add Breaks in addition to the
    Replaces on old libx11-dev.

 -- Julien Cristau <jcristau@debian.org>  Thu, 19 Apr 2012 22:20:57 +0200

libx11 (2:1.4.99.1-1) experimental; urgency=low

  [ Julien Cristau ]
  * Move xorg-sgml-doctools dependency from -dev to -doc.
  * Move libx11-doc from section libdevel to doc (closes: #648706).

  [ Cyril Brulebois ]
  * New upstream release candidate:
    - Bug fixes, specs clean-up, new compose sequences.
    - Add GetRequestSized.
  * Bump xorg-sgml-doctools build-dep.
  * Refresh patch:
    - 006_tailor_pt_BR.UTF-8_Compose.diff
  * Add symbol:
    - _XGetRequest@Base
  * Bump shlibs accordingly, for the udeb.

 -- Cyril Brulebois <kibi@debian.org>  Thu, 22 Dec 2011 12:58:15 +0100

libx11 (2:1.4.4-4) unstable; urgency=low

  * debian/rules: since the documentation is moved to libx11-doc, the
    exception handling for libx11-xcb-dev needs to also look at libx11-doc,
    not libx11-dev.

 -- Steve Langasek <vorlon@debian.org>  Fri, 11 Nov 2011 06:51:51 -0800

libx11 (2:1.4.4-3) unstable; urgency=low

  * Split documentation out from libx11-dev into a separate libx11-doc
    package, so that libx11-dev can be multiarch co-installable.

 -- Steve Langasek <vorlon@debian.org>  Wed, 09 Nov 2011 12:13:26 -0800

libx11 (2:1.4.4-2) unstable; urgency=low

  [ Colin Watson ]
  * Fix cross-compilation breakage due to a typo in the multiarch patch
    (closes: #642402)

 -- Julien Cristau <jcristau@debian.org>  Thu, 22 Sep 2011 17:42:39 +0200

libx11 (2:1.4.4-1) unstable; urgency=low

  * New upstream release.
  * Drop xorg.css from libx11-dev, depend on xorg-sgml-doctools instead.
